[gd_scene load_steps=4 format=3 uid="uid://ca3lkrp7q8nnj"]

[ext_resource type="Script" path="res://optionManager.gd" id="1_jr5n2"]
[ext_resource type="FontFile" uid="uid://nn6s6pjj8gr1" path="res://art/KingBird-VG1JB.otf" id="1_ns2ra"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehexr"]
bg_color = Color(0, 0, 0, 0.423529)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Options" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -107.0
offset_right = 166.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1704, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_ehexr")

[node name="BackButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 126.0
offset_right = 22.5
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -89.0
offset_right = 215.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 10

[node name="VolumeLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ns2ra")
text = "Master Volume"

[node name="MusicLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ns2ra")
text = "Music Volume"

[node name="SFXLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ns2ra")
text = "SFX Volume"

[node name="DisplayModeLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ns2ra")
text = "Display Mode"

[node name="VsyncLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ns2ra")
text = "Vsync Mode"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2
script = ExtResource("1_jr5n2")

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/v_separation = 20

[node name="MasterSlider" type="HSlider" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
min_value = -24.0
max_value = 6.0

[node name="MusicSlider" type="HSlider" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
min_value = -24.0
max_value = 6.0

[node name="SFXSlider" type="HSlider" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
min_value = -24.0
max_value = 6.0

[node name="DisplayModeDropdown" type="OptionButton" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ns2ra")
item_count = 3
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Exclusive Fullscreen"
popup/item_2/id = 2

[node name="VsyncDropdown" type="OptionButton" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ns2ra")
item_count = 3
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Adaptive"
popup/item_1/id = 1
popup/item_2/text = "Enabled"
popup/item_2/id = 2

[connection signal="pressed" from="BackButton" to="HBoxContainer/VBoxContainer2" method="_on_back_button_pressed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer2/GridContainer/MasterSlider" to="HBoxContainer/VBoxContainer2" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer2/GridContainer/MusicSlider" to="HBoxContainer/VBoxContainer2" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer2/GridContainer/SFXSlider" to="HBoxContainer/VBoxContainer2" method="_on_sfx_slider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer2/GridContainer/DisplayModeDropdown" to="HBoxContainer/VBoxContainer2" method="_on_display_mode_dropdown_item_selected"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer2/GridContainer/VsyncDropdown" to="HBoxContainer/VBoxContainer2" method="_on_vsync_dropdown_item_selected"]
